--- a/assets/reiskoch-theme.css
+++ b/assets/reiskoch-theme.css
@@ -1,1 +1,7 @@
-
+:root {
+  --body-background-color: #001716;
+  --body-text-color: #f0ffff;
+  --card-background-color: #002b29;
+  --nav-background-color: #002b29;
+  --nav-border-bottom-color: #015450;
+}
