changed theme bg colors

--- a/assets/reiskoch-theme.css
+++ b/assets/reiskoch-theme.css
@@ -1,7 +1,7 @@
 :root {
-  --body-background-color: #f7f3e6;
+  --body-background-color: #ebe0bf;
   --body-text-color: #f0ffff;
   --card-background-color: #eaeaea;
-  --nav-background-color: #f7f3e6;
+  --nav-background-color: #ebe0bf;
   --nav-border-bottom-color: #015450;
 }
